--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -115,10 +115,13 @@ $mainMod = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod SHIFT, RETURN, exec, alacritty
-bind = $mainMod, Q, killactive, 
+bind = $mainMod, W, exec, firefox
+bind = $mainMod, G, exec, gimp
+bind = $mainMod, T, exec, thunar
+bind = $mainMod, E, exec, emacsclient -c
+bind = $mainMod, Q, killactive
 bind = $mainMod, M, exit, 
 bind = $mainMod, F, fullscreen
-bind = $mainMod, E, exec, thunar
 bind = SUPER_SHIFT, L, exec, swaylock --screenshots --clock --indicator --indicator-radius 100 --indicator-thickness 7 --effect-blur 7x5 --effect-vignette 0.5:0.5 --ring-color bb00cc --key-hl-color 880033 --line-color 00000000 --inside-color 00000088 --separator-color 00000000
 bind = $mainMod, V, togglefloating, 
 bind = $mainMod, P, exec, fuzzel
