ENH: monitors behavior after lid closed

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -189,3 +189,9 @@ windowrule=float,^(vimiv)$
 windowrule=size 1000 600,^(vimiv)$
 
 windowrulev2 = noanim, class:^(telegram-desktop)$
+# trigger when the switch is toggled
+bindl = , switch:off:Lid Switch,exec,swaylock --screenshots --clock --indicator --indicator-radius 100 --indicator-thickness 7 --effect-blur 7x5 --effect-vignette 0.5:0.5 --ring-color bb00cc --key-hl-color 880033 --line-color 00000000 --inside-color 00000088 --separator-color 00000000
+# trigger when the switch is turning off
+bindl = , switch:off:Lid Switch,exec,hyprctl keyword monitor "eDP-1, 1920x1080, 0x0, 1"
+# trigger when the switch is turning on
+bindl = , switch:on:Lid Switch,exec,hyprctl keyword monitor "eDP-1, disable"
