--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -22,6 +22,11 @@ exec-once = ~/.config/hypr/start.sh
 # Some default env vars.
 env = XCURSOR_SIZE,24
 
+misc {
+    # See https://wiki.hyprland.org/Configuring/Variables/ for more
+    force_default_wallpaper = 0 # Set to 0 to disable the anime mascot wallpapers
+} 
+
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
     kb_layout = us,ru
@@ -117,12 +122,12 @@ $mainMod = SUPER
 bind = $mainMod SHIFT, RETURN, exec, alacritty
 bind = $mainMod, W, exec, firefox
 bind = $mainMod, G, exec, gimp
-bind = $mainMod, T, exec, thunar
+bind = $mainMod, T, exec, emacsclient -c -a '' ~/almlab_sync/
 bind = $mainMod, E, exec, emacsclient -c
 bind = $mainMod, Q, killactive
-bind = $mainMod, M, exit, 
+bind = SUPERSHIFT, M, exit,
 bind = $mainMod, F, fullscreen
-bind = SUPER_SHIFT, L, exec, swaylock --screenshots --clock --indicator --indicator-radius 100 --indicator-thickness 7 --effect-blur 7x5 --effect-vignette 0.5:0.5 --ring-color bb00cc --key-hl-color 880033 --line-color 00000000 --inside-color 00000088 --separator-color 00000000
+bind = SUPER_SHIFT, q, exec, swaylock --screenshots --clock --indicator --indicator-radius 100 --indicator-thickness 7 --effect-blur 7x5 --effect-vignette 0.5:0.5 --ring-color bb00cc --key-hl-color 880033 --line-color 00000000 --inside-color 00000088 --separator-color 00000000
 bind = $mainMod, V, togglefloating, 
 bind = $mainMod, P, exec, fuzzel
 bind = $mainMod, Y, exec, wtype "$(cat almlab_sync/snippets | fuzzel -d)"
@@ -143,7 +148,7 @@ bind = $mainMod, K, movefocus, u
 bind = $mainMod, J, movefocus, d
 
 # scratchpad
-bind=SUPER_SHIFT, N, movetoworkspace,special
+bind=SUPER_SHIFT, N, movetoworkspacesilent,special
 bind=SUPER, N, togglespecialworkspace,
 
 # Switch workspaces with mainMod + [0-9]
@@ -158,17 +163,23 @@ bind = $mainMod, 8, workspace, 8
 bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, workspace, 10
 
+# Moving windows
+bind = $mainMod SHIFT, H, movewindow, l
+bind = $mainMod SHIFT, L, movewindow, r
+bind = $mainMod SHIFT, K, movewindow, u
+bind = $mainMod SHIFT, J, movewindow, d
+
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
-bind = $mainMod SHIFT, 1, movetoworkspace, 1
-bind = $mainMod SHIFT, 2, movetoworkspace, 2
-bind = $mainMod SHIFT, 3, movetoworkspace, 3
-bind = $mainMod SHIFT, 4, movetoworkspace, 4
-bind = $mainMod SHIFT, 5, movetoworkspace, 5
-bind = $mainMod SHIFT, 6, movetoworkspace, 6
-bind = $mainMod SHIFT, 7, movetoworkspace, 7
-bind = $mainMod SHIFT, 8, movetoworkspace, 8
-bind = $mainMod SHIFT, 9, movetoworkspace, 9
-bind = $mainMod SHIFT, 0, movetoworkspace, 10
+bind = $mainMod SHIFT, 1, movetoworkspacesilent, 1
+bind = $mainMod SHIFT, 2, movetoworkspacesilent, 2
+bind = $mainMod SHIFT, 3, movetoworkspacesilent, 3
+bind = $mainMod SHIFT, 4, movetoworkspacesilent, 4
+bind = $mainMod SHIFT, 5, movetoworkspacesilent, 5
+bind = $mainMod SHIFT, 6, movetoworkspacesilent, 6
+bind = $mainMod SHIFT, 7, movetoworkspacesilent, 7
+bind = $mainMod SHIFT, 8, movetoworkspacesilent, 8
+bind = $mainMod SHIFT, 9, movetoworkspacesilent, 9
+bind = $mainMod SHIFT, 0, movetoworkspacesilent, 10
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
