--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,4 +1,5 @@
-set -g default-terminal "screen-256color"
+# set -g default-terminal "screen-256color"
+set-option -sa terminal-overrides ",xterm*:Tc"
 
 set -g mouse on
 
@@ -9,15 +10,13 @@ bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
 
-# remote session
-bind-key b send-prefix
-
-#
 bind-key -n C-S-Left swap-window -t -1\; select-window -t -1
 bind-key -n C-S-Right swap-window -t +1\; select-window -t +1
 
 # List of plugins
-# set -g @plugin 'tmux-plugins/tpm'
-# set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'niksingh710/minimal-tmux-status'
 
-# run '~/.tmux/plugins/tpm/tpm'
+run '~/.tmux/plugins/tpm/tpm'
